--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+/*
+Theme Name: Portfolio
+Theme URI: https://monirbishal.com
+Author: Monir Bishal
+Author URI: https://monirbishal.com/
+Description: Personal Portfolio site of Monir Bishal
+Tags: monirbishal
+Version: 1.0
+Text Domain: monirbishal
+This portfolio theme of Monir Bishal
+*/
 body {
     font-family: 'Mina', sans-serif;
     color: #212529;
